.config/waybar/style.css
/* =============================================================================
 *
 * Waybar configuration
 *
 * Configuration reference: https://github.com/Alexays/Waybar/wiki/Configuration
 *
 * =========================================================================== */

/* -----------------------------------------------------------------------------
 * Keyframes
 * -------------------------------------------------------------------------- */

/* -----------------------------------------------------------------------------
 * Base styles
 * -------------------------------------------------------------------------- */

/* Reset all styles */

* {
  border-radius: 0;
  font-family: "OCR A";
  /* font-family: "Kode Mono"; */
  font-size: 14px;
  min-height: 14px;
  border: none;

}

window#waybar {
  background: transparent;
  color: #000000;
  margin: 0;
  padding: 0;
}

tooltip {
  color: #b0e0e6;
  background: #000;
  border: solid 2px #b0e0e6;
}

#workspaces,
#tags {
  background-color: #000;
  border-bottom: solid 1px #b0e0e6;
  border-right: solid 1px #b0e0e6;
}

#workspaces button,
#tags button {
  padding-left: 8;
  padding-right: 8;
  color: #b0e0e6;
}

#workspaces button.focused,
#tags button.focused {
  background-color: #b0e0e6;
  color: #000;
}

#workspaces button.urgent,
#tags button.urgent {
  color: #000;
  background-color: #ffcf00;
}

#workspaces button:hover,
#tags button:hover {
  background-color: #88c0d0;
  color: #2a2e38;
}

#mode {
  color: #2e3440;
  background-color: #ebcb8b;
  border-bottom: solid 1px #b0e0e6;
  border-right: solid 1px #b0e0e6;
  padding: 5px 10px 5px 10px;
}

#window {
  color: #b0e0e6;
  background-color: #000;
  border-bottom: solid 1px #b0e0e6;
  border-left: solid 1px #b0e0e6;
  border-right: solid 1px #b0e0e6;
  padding: 5px 10px 5px 10px;
}

/* #window:blank { */
/*     border: none; */
/* } */

#clock,
#battery,
#cpu,
#memory,
#idle_inhibitor,
#temperature,
#custom-keyboard-layout,
#backlight,
#network,
#pulseaudio,
#tray,
#custom-launcher,
#custom-power,
#custom-pacman {
  padding: 5px 10px 5px 10px;
  background-color: #000;
  color: #b0e0e6;
  border-right: solid 1px #b0e0e6;
  border-bottom: solid 1px #b0e0e6;
}

/* -----------------------------------------------------------------------------
 * Module styles
 * -------------------------------------------------------------------------- */

#pulseaudio.muted {
  background-color: #545454;
}

#idle_inhibitor.activated {
  background-color: #911f34;
  color: #000;
}

#network {
  /* on the left edge of the right modules */
  border-left: solid 1px #b0e0e6;
}

#network.disabled {
  color: #bf616a;
}

#network.disconnected {
  color: #d8dee9;
  background-color: #6b2a50;
}

#battery.charging {
  color: #f09a1a;
}

@keyframes blink {
  to {
    color: #4c566a;
    background-color: #000;
  }
}

#battery.critical:not(.charging) {
  background: #bf616a;
  color: #eceff4;
  animation-name: blink;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#clock {
  /* goes on far right side */
  border-right: none;
}

#temperature.critical {
  color: #ff0000;
}

